--- a/pandas_firstlab.ipynb
+++ b/pandas_firstlab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9d7hkgo1eMdn06BXX9kyJ",
+      "authorship_tag": "ABX9TyNNgY6PhW6pY2YeetB4eUb8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4941,29 +4941,40 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OY5YOjOi1L5i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "data[ (data['age']>25) & (data['gender']=='m') ]"
+        "data[ (data['age']>25) | (data['gender']=='m') ]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 81
+          "height": 143
         },
         "id": "k3egZEV4xNTG",
-        "outputId": "a3a4a63f-1532-45ce-a6e0-e4a5d20756f0"
+        "outputId": "c8e20b7f-b78e-483c-df27-bd857771991f"
       },
-      "execution_count": 27,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "    name  age gender\n",
-              "2  divay   30      m"
+              "     name  age gender\n",
+              "0  nisarg   20      m\n",
+              "1    ajay   25      m\n",
+              "2   divay   30      m"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-96018d10-b04b-4f99-a4b0-7cdec9ea6b60\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9cf01e2a-6e2d-4b67-9495-042ff957fb86\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -4989,6 +5000,18 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>nisarg</td>\n",
+              "      <td>20</td>\n",
+              "      <td>m</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>ajay</td>\n",
+              "      <td>25</td>\n",
+              "      <td>m</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>divay</td>\n",
               "      <td>30</td>\n",
@@ -5000,7 +5023,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-96018d10-b04b-4f99-a4b0-7cdec9ea6b60')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9cf01e2a-6e2d-4b67-9495-042ff957fb86')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5052,12 +5075,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-96018d10-b04b-4f99-a4b0-7cdec9ea6b60 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9cf01e2a-6e2d-4b67-9495-042ff957fb86 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-96018d10-b04b-4f99-a4b0-7cdec9ea6b60');\n",
+              "        const element = document.querySelector('#df-9cf01e2a-6e2d-4b67-9495-042ff957fb86');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -5077,18 +5100,147 @@
               "  </div>\n",
               "\n",
               "\n",
+              "<div id=\"df-111d870e-7965-4d99-8936-30b8fbd7db19\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-111d870e-7965-4d99-8936-30b8fbd7db19')\"\n",
+              "            title=\"Suggest charts\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-111d870e-7965-4d99-8936-30b8fbd7db19 button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "\n",
               "    </div>\n",
               "  </div>\n"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 35
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        ""
+      ],
       "metadata": {
         "id": "7Th0bUNIxiTv"
       },
